add image pada review html

--- a/FooS/Assets/index.html
+++ b/FooS/Assets/index.html
@@ -163,7 +163,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="" alt="">
+                    <img src="./img/Astuti.jpg" alt="">
                     <div class="user-info">
                         <h3>Astuti</h3>
                     </div>
@@ -174,7 +174,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="" alt="">
+                    <img src="./img/Dewita.jpg" alt="">
                     <div class="user-info">
                         <h3>dewita</h3>
                     </div>
@@ -185,7 +185,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="" alt="">
+                    <img src="./img/Zulkifli.jpg" alt="">
                     <div class="user-info">
                         <h3>Zulkifli</h3>
                     </div>
@@ -207,7 +207,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="" alt="">
+                    <img src="./img/Jihan.jpg" alt="">
                     <div class="user-info">
                         <h3>Jihan</h3>
                     </div>
